--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.output=${dist.jlink.dir}/Aplikasi_BankSampah_Kelompok_3
 excludes=
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Tugas Sekolah dan Kuliah\\Universitas Udayana\\SEMESTER 2\\Pemrograman Berorientasi Objek\\MySqlJdbcDriver\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-j-8.3.0.jar-1=C:\\Tugas Sekolah dan Kuliah\\Universitas Udayana\\SEMESTER 2\\Pemrograman Berorientasi Objek\\MySqlJdbcDriver\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.3.0.jar-2=D:\\PROJECT\\JAVA\\mysql-connector-j-8.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.3.0.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-8.3.0.jar-1}
+    ${file.reference.mysql-connector-j-8.3.0.jar-1}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
