--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Aplikasi_BankSampah_Kelompok_3
 excludes=
 file.reference.datechooser.jar=C:\\Users\\aryaa\\NetBeansProjects\\datechooser.jar
+file.reference.datechooser.jar-1=C:\\Tugas Sekolah dan Kuliah\\Universitas Udayana\\SEMESTER 2\\Pemrograman Berorientasi Objek\\datechooser.jar
+file.reference.datechooser1.jar=C:\\Tugas Sekolah dan Kuliah\\Universitas Udayana\\SEMESTER 2\\Pemrograman Berorientasi Objek\\datechooser1.jar
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Tugas Sekolah dan Kuliah\\Universitas Udayana\\SEMESTER 2\\Pemrograman Berorientasi Objek\\MySqlJdbcDriver\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-j-8.3.0.jar-1=C:\\Tugas Sekolah dan Kuliah\\Universitas Udayana\\SEMESTER 2\\Pemrograman Berorientasi Objek\\MySqlJdbcDriver\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-j-8.3.0.jar-2=D:\\PROJECT\\JAVA\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.3.0.jar-3=C:\\Tugas Sekolah dan Kuliah\\Universitas Udayana\\SEMESTER 2\\Pemrograman Berorientasi Objek\\MySqlJdbcDriver\\mysql-connector-j-8.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +47,10 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-8.3.0.jar-1}:\
     ${file.reference.mysql-connector-j-8.3.0.jar-2}:\
-    ${file.reference.datechooser.jar}
+    ${file.reference.datechooser.jar}:\
+    ${file.reference.datechooser1.jar}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar-3}:\
+    ${file.reference.datechooser.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
